# api/hospital-wl.openapi.yaml
@@ -44,3 +44,115 @@ paths:
                   $ref: "#/components/examples/WaitingListEntriesExample"
         "404":
           description: Hospital with such ID does not exist
+
+components:
+  schemas:
+    WaitingListEntry:
+      type: object
+      required: [id, patientId, waitingSince, estimatedDurationMinutes]
+      properties:
+        id:
+          type: string
+          example: x321ab3
+          description: Unique id of the entry in this waiting list
+        name:
+          type: string
+          example: Jožko Púčik
+          description: Name of patient in waiting list
+        patientId:
+          type: string
+          example: 460527-jozef-pucik
+          description: Unique identifier of the patient known to Web-In-Cloud system
+        waitingSince:
+          type: string
+          format: date-time
+          example: "2038-12-24T10:05:00Z"
+          description: Timestamp since when the patient entered the waiting list
+        estimatedStart:
+          type: string
+          format: date-time
+          example: "2038-12-24T10:35:00Z"
+          description: Estimated time of entering hospital. Ignored on post.
+        estimatedDurationMinutes:
+          type: integer
+          format: int32
+          example: 15
+          description: >-
+            Estimated duration of hospital visit. If not provided then it will
+            be computed based on condition and hospital settings
+        condition:
+          $ref: "#/components/schemas/Condition"
+      example:
+        $ref: "#/components/examples/WaitingListEntryExample"
+    Condition:
+      description: "Describes disease, symptoms, or other reasons of patient   visit"
+      required:
+        - value
+      properties:
+        value:
+          type: string
+          example: Teploty
+        code:
+          type: string
+          example: subfebrilia
+        reference:
+          type: string
+          format: url
+          example: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
+          description: Link to encyclopedical explanation of the patient's condition
+        typicalDurationMinutes:
+          type: integer
+          format: int32
+          example: 20
+      example:
+        $ref: "#/components/examples/ConditionExample"
+  examples:
+    WaitingListEntryExample:
+      summary: Ľudomír Zlostný waiting
+      description: |
+        Entry represents a patient waiting in the hospital prep room with
+        defined symptoms
+      value:
+        id: x321ab3
+        name: Ľudomír Zlostný
+        patientId: 74895-ludomir-zlostny
+        waitingSince: "2038-12-24T10:05:00.000Z"
+        estimatedStart: "2038-12-24T10:35:00.000Z"
+        estimatedDurationMinutes: 15
+        condition:
+          value: Nevoľnosť
+          code: nausea
+          reference: "https://zdravoteka.sk/priznaky/nevolnost/"
+    ConditionExample:
+      summary: Conditions and symptoms
+      description: list of few symptoms that can be chosen by patients
+      value:
+        valuee: Teploty
+        code: subfebrilia
+        reference: >-
+          https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/
+    WaitingListEntriesExample:
+      summary: List of waiting patients
+      description: |
+        Example waiting list containing 2 patients
+      value:
+      - id: x321ab3
+        name: Jožko Púčik
+        patientId: 460527-jozef-pucik
+        waitingSince: "2038-12-24T10:05:00.000Z"
+        estimatedStart: "2038-12-24T10:35:00.000Z"
+        estimatedDurationMinutes: 15
+        condition:
+          value: Teploty
+          code: subfebrilia
+          reference: "https://zdravoteka.sk/priznaky/zvysena-telesna-teplota/"
+      - id: x321ab4
+        name: Ferdinand Trety
+        patientId: 780907-ferdinand-tre
+        waitingSince: "2038-12-24T10:25:00.000Z"
+        estimatedStart: "2038-12-24T10:50:00.000Z"
+        estimatedDurationMinutes: 25
+        condition:
+          value: Nevoľnosť
+          code: nausea
+          reference: "https://zdravoteka.sk/priznaky/nevolnost/"
