# src/api/hospital-wl/apis/HospitalWaitingListApi.ts
@@ -1,0 +1,91 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Waiting List Api
+ * Hospital Waiting List management for Web-In-Cloud system
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: xkacani@stuba.sk
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  WaitingListEntry,
+} from '../models';
+import {
+    WaitingListEntryFromJSON,
+    WaitingListEntryToJSON,
+} from '../models';
+
+export interface GetWaitingListEntriesRequest {
+    hospitalId: string;
+}
+
+/**
+ * HospitalWaitingListApi - interface
+ * 
+ * @export
+ * @interface HospitalWaitingListApiInterface
+ */
+export interface HospitalWaitingListApiInterface {
+    /**
+     * By using hospitalId you get list of entries in hospital waiting list
+     * @summary Provides the hospital waiting list
+     * @param {string} hospitalId pass the id of the particular hospital
+     * @param {*} [options] Override http request option.
+     * @throws {RequiredError}
+     * @memberof HospitalWaitingListApiInterface
+     */
+    getWaitingListEntriesRaw(requestParameters: GetWaitingListEntriesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<WaitingListEntry>>>;
+
+    /**
+     * By using hospitalId you get list of entries in hospital waiting list
+     * Provides the hospital waiting list
+     */
+    getWaitingListEntries(requestParameters: GetWaitingListEntriesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<WaitingListEntry>>;
+
+}
+
+/**
+ * 
+ */
+export class HospitalWaitingListApi extends runtime.BaseAPI implements HospitalWaitingListApiInterface {
+
+    /**
+     * By using hospitalId you get list of entries in hospital waiting list
+     * Provides the hospital waiting list
+     */
+    async getWaitingListEntriesRaw(requestParameters: GetWaitingListEntriesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<WaitingListEntry>>> {
+        if (requestParameters.hospitalId === null || requestParameters.hospitalId === undefined) {
+            throw new runtime.RequiredError('hospitalId','Required parameter requestParameters.hospitalId was null or undefined when calling getWaitingListEntries.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/waiting-list/{hospitalId}/entries`.replace(`{${"hospitalId"}}`, encodeURIComponent(String(requestParameters.hospitalId))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(WaitingListEntryFromJSON));
+    }
+
+    /**
+     * By using hospitalId you get list of entries in hospital waiting list
+     * Provides the hospital waiting list
+     */
+    async getWaitingListEntries(requestParameters: GetWaitingListEntriesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<WaitingListEntry>> {
+        const response = await this.getWaitingListEntriesRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+}
